                   ===============================
                   Release Notes for Samba 3.0.21b
                              Jan 27, 2006
                   ===============================

This is the latest stable release of Samba. This is the version
that production Samba servers should be running for all current
bug-fixes.  Please read the following important changes in this
release.

Common bugs fixed in 3.0.21b include:

  o Server crashes in smbd.
  o Compile issues on 64-bit platforms.
  o Crash bugs on big-endian systems.
  o Packaging fixes for RHEL/Fedora, Solaris, & Debian.
  o Over 30 bugzilla reports closed.


######################################################################
Changes
#######

Changes since 3.0.21a
--------------------

commits
-------
o   Jeremy Allison <jra@samba.org>
    * Fix the SAMR cache across handles opens and closes.
    * Re-add the talloc_describe_all() function for reporting pool 
      usage.
    * Merge talloc license change from Samba 4.
    * Fix 64-bit compile warnings reported by gcc.
    * Add the share path into the sharemode db. 
    * Consistency fixes: Remove use of uint8_t -> uint8.
    * BUG 3346: Fix crash bug in big-endian boxes by linearizing 
      structure when passing through the messaging API.
    * BUG 3421: Fix segv in the kerberos key tab code (Thanks to 
      Luke Deller).
    * Force smbd to exit if the guest account internal setup fails.
    * BUG 3419: vfs_full_audit fixes for multiple connections.
    * Ensure SWAT lists running processes.
    * Fix NTLMv2 interoperability bug between Samba servers.


o   Andrew Bartlett <abartlet@samba.org>
    * BUG 3401: Fix crash bug caused by incorrect handling of weak 
      session keys.  Based on original patch from Yau Lam Yiu.


o   Alexander Bokovoy <ab@samba.org>
    * BUG 3397: Add USER_INFO_9 for SMS 2003 support (ported from 
      Samba TNG code).


o   Stefan Burkei <stefan@burkei.de>